test-cases/negative/test_094_invalid_operator.lay
# negative test: invalid operator usage
# expected: parser should reject this

the variable x of type Number is 5 @ 7


